styles/accueil.css
/* Général */

body {
    font-family: 'Roboto', sans-serif;
}

:root {
    --couleur-primaire: #9356DC;
    --couleur-secondaire: #FF79DA;
    --couleur-tertiaire: #99E2D0;
}

* {
    box-sizing: border-box; /* Opera/IE 8+ */
    -moz-box-sizing: border-box; /* Firefox, autres Gecko */
    -webkit-box-sizing: border-box; /* Safari/Chrome, autres Webkit */
}

a {
    color: black;
    text-decoration: none;
}

/* Classes utilisées plusieurs fois */

/* Classes flexbox */

.flexbox-justify-align-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.display-align-center {
    display: flex;
    align-items: center;
}

.gap-10px {
    gap: 10px;
}

/* Classes positions (absolute, relative) */

.position-fixed {
    position: fixed;
}

.position-relative {
    position: relative;
}

.position-absolute {
    position: absolute;
}

/* Classes margin/padding */

.padding-top-20px {
    padding-top: 20px;
}

.suppression-margin {
    margin: 0;
}

.margin-top-45px {
    margin-top: 45px;
}

/* Classes couleurs */

.fond-gris-clair {
    background-color: rgb(246, 246, 246);
}

.couleur-blanc {
    color: white;
}

/* Autres classes */

.hauteur-50px {
    height: 50px;
}


.font-size-medium {
    font-size: medium;
}

/* FIN DES CLASSES UTILISEES PLUSIEURS FOIS - DEBUT DU CODE CSS POUR LE PROJET CI-DESSOUS */

/* Loading Spinner */

.filtre-loader {
    height: 100vh;
    inset: 0px;
    z-index: 0;
    opacity: 0.9;
    animation: fadeOut 3s forwards;
}

@keyframes fadeOut {
    to {
    visibility: hidden;
}
}

.loader {
    background: var(--couleur-primaire);
    border: 5px solid var(--couleur-tertiaire);
    border-top: 5px solid var(--couleur-secondaire);
    width: 50px;
    border-radius: 50%;
    animation: spin 3s linear infinite;
}

@keyframes spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
}

/* Header */

header {
    height: 63px;
}

.logo {
    width: 150px;
}

/* Corps de la page */

/* Localisation utilisateur */

.background-localisation-utilisateur {
    background-color: rgb(234, 234, 234);
    box-shadow: inset 0px 4px 4px rgb(213, 213, 213);
    gap: 15px;
    padding-right: 15px;
}

/* Présentation ohmyfood */

.presentation-ohmyfood {
    min-height: 275px;
    text-align: center;
}

.bouton-explorer {
    background-image: linear-gradient(var(--couleur-secondaire), var(--couleur-primaire));
    padding: 15px 20px;
    border: none;
    box-shadow: 0px 5px 5px 0px rgb(204, 204, 204);
    border-radius: 30px;
}

.bouton-explorer:hover {
    cursor: pointer;
    filter: brightness(1.1);
    box-shadow: 0px 5px 5px 0px rgb(160, 160, 160);
    transition: 250ms ease-in-out;
}

/* Fonctionnement ohmyfood */

.position-titre-fonctionnement {
    margin-left: 15px;
}

.conteneur-fonctionnement {
    border-radius: 20px;
    margin: 0px 20px 25px 20px;
    box-shadow: 4px 8px 8px rgb(234, 234, 234);
}

.conteneur-fonctionnement:hover {
    filter: brightness(0.98);
    cursor: pointer;
}

.gap-blocs-fonctionnement {
    gap: 20px;
}

.couleur-icones-fonctionnement {
    color: rgb(126, 126, 126);
}

.conteneur-fonctionnement:hover .couleur-icones-fonctionnement {
    color: var(--couleur-primaire);
}

.cercle-chiffres-fonctionnement {
    height: 20px;
    width: 20px;
    border-radius: 25px;
    background-color: var(--couleur-primaire);
}

.position-cercle-fonctionnement {
    margin-left: -10px;
}

/* Restaurants disponibles */

.position-conteneur-restaurants {
    padding-bottom: 60px;
}

.position-titre-restaurants {
    padding-top: 45px;
    margin-left: 20px;
}

.flexbox-restaurants-global {
    align-items: center;
    gap: 1.375rem;
}

.conteneur-restaurants {
    width: 90%;
    background-color: white;
    border-radius: 0.9375rem;
    box-shadow: 0rem 0.125rem 0.3125rem 0.25rem rgb(235, 235, 235);
}

.conteneur-restaurants:hover {
    cursor: pointer;
}

.photos-restaurants-disponibles {
    height: 12.5rem;
    width: 100%;
    object-fit: cover;
    border-radius: 0.625rem 0.625rem 0rem 0rem;
}

.nouveau-restaurant {
    background-color: var(--couleur-tertiaire);
    color: darkgreen;
    padding: 0.375rem;
    border-radius: 0.1875rem;
    top: 7%;
    right: 3%;
}

.informations-restaurants-disponibles {
    margin-left: 0.9375rem;
}

.margin-titre-restaurants {
    margin-top: 0.9375rem;
}

.margin-paragraphe-restaurants {
    margin-bottom: 1.25rem;
    margin-top: 0.3125rem;
}

.classe-icone {
    font-size: 2em;
    right: 7%;
    top: 25%;
}

.fas {
    color: transparent;
    background-image: linear-gradient(var(--couleur-primaire), var(--couleur-secondaire));
    background-clip: text;
    -webkit-background-clip: text;
    opacity: 0;
    transition: all 200ms ease-in-out;
}

.fas:hover {
    opacity: 1;
    transform: scale(1.1);
}

/* Footer */

footer {
    display: flex;
    background-color: rgb(53, 53, 53);
    padding: 30px 0px 25px 0px;
}

.flex-footer {
    display: flex;
    flex-direction: column;
}

.titre-footer-ohmyfood {
    font-family: 'Shrikhand', sans-serif;
    font-size: 1.17em;
    margin-bottom: 15px;
    margin-left: 30px;
}

ul {
    list-style-type: none;
    padding-left: 30px
}

.text-decoration-none {
    text-decoration: none;
}

footer p:hover {
    cursor: pointer;
}

.gap-footer-1 {
    gap: 16.5px;
}

